// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot: renderForTool > claude-code snapshot 1`] = `
{
  "files": [
    {
      "content": "# Communication

## Constraints

- Be concise

## Guidelines

- Use Korean",
      "relativePath": ".claude/rules/communication.md",
    },
    {
      "content": "---
paths:
  - "**/*.ts"
  - "**/*.tsx"
---

# Typescript

## Constraints

- No any

## Guidelines

- Use arrow functions",
      "relativePath": ".claude/rules/typescript.md",
    },
  ],
  "tool": "claude-code",
}
`;

exports[`Snapshot: renderForTool > codex snapshot 1`] = `
{
  "domainFiles": [],
  "rootContent": "# Communication

## Constraints

- Be concise

## Guidelines

- Use Korean

---

# Typescript

## Constraints

- No any

## Guidelines

- Use arrow functions",
  "tool": "codex",
}
`;

exports[`Snapshot: renderForTool > gemini snapshot 1`] = `
{
  "domainFiles": [],
  "rootContent": "# Communication

## Constraints

- Be concise

## Guidelines

- Use Korean

---

# Typescript

## Constraints

- No any

## Guidelines

- Use arrow functions",
  "tool": "gemini",
}
`;
